--- a/KlassWork/Practica2.html
+++ b/KlassWork/Practica2.html
@@ -10,30 +10,27 @@
         <p></p>
         <p align="right"><i>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..."</i></p>
         <small><p align="right"><i>"Nunc sed blandit libero volutpat sed cras ornare arcu..."</i></p></small>
-        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Cursus turpis massa tincidunt dui ut ornare lectus sit amet. Risus quis varius quam quisque id diam vel quam elementum. 
-            Massa massa ultricies mi quis hendrerit dolor magna eget est. Massa tempor nec feugiat nisl pretium fusce. 
-            Vestibulum lorem sed risus ultricies tristique nulla. Eros donec ac odio tempor orci dapibus ultrices in. 
-            Odio ut sem nulla pharetra diam sit amet nisl. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum. 
-            Blandit massa enim nec dui nunc mattis. At quis risus sed vulputate odio. Non tellus orci ac auctor augue. 
-            Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Massa tincidunt nunc pulvinar sapien et ligula.
-             Adipiscing elit duis tristique sollicitudin nibh sit.
+
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <span class="first">Cursus turpis massa tincidunt dui ut ornare lectus sit amet.</span>
+            <span class="second">Risus quis varius quam quisque id diam vel quam elementum.</span>
+            <span class="third">Massa massa ultricies mi quis hendrerit dolor magna eget est.</span>
+            <span class="fourth">Massa tempor nec feugiat nisl pretium fusce.</span>
+            <span class="fifth">Vestibulum lorem sed risus ultricies tristique nulla.</span>
         </p>
-        <p class="paragraph">Gravida rutrum quisque non tellus orci ac auctor augue. Elit pellentesque habitant morbi tristique senectus et netus. 
-                Arcu bibendum at varius vel pharetra. Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat. Diam
-                 sollicitudin tempor id eu. Justo laoreet sit amet cursus sit amet. A erat nam at lectus urna duis. Fusce ut placerat 
-                 orci nulla pellentesque dignissim enim sit amet. Magna fringilla urna porttitor rhoncus dolor. Sagittis aliquam malesuada
-                  bibendum arcu vitae elementum curabitur vitae nunc. Pharetra massa massa ultricies mi.
+        <p class="paragraph">Gravida rutrum quisque non tellus orci ac auctor augue.
+            <span class="first">Elit pellentesque habitant morbi tristique senectus et netus.</span>
+            <span class="second">Arcu bibendum at varius vel pharetra.</span>
+            <span class="third">Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat.</span>
+            <span class="fourth">Justo laoreet sit amet cursus sit amet.</span>
+            <span class="fifth">A erat nam at lectus urna duis.</span>
         </p>
-        <p class="paragraph">Massa tempor nec feugiat nisl pretium fusce id. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum. 
-                Sit amet volutpat consequat mauris nunc. Morbi quis commodo odio aenean sed adipiscing diam. Eget nullam non
-                 nisi est sit amet. Nulla facilisi morbi tempus iaculis urna id volutpat lacus. Turpis in eu mi bibendum. 
-                 Consectetur purus ut faucibus pulvinar elementum integer. Cras fermentum odio eu feugiat. Fermentum et sollicitudin
-                  ac orci phasellus egestas tellus. Pulvinar pellentesque habitant morbi tristique senectus et. Sed adipiscing diam
-                   donec adipiscing tristique risus nec feugiat. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. 
-                   Commodo quis imperdiet massa tincidunt nunc pulvinar. Tincidunt ornare massa eget egestas purus viverra accumsan.
-                    Morbi tincidunt ornare massa eget egestas purus viverra accumsan in. Lectus mauris ultrices eros in. Tristique
-                     senectus et netus et malesuada fames ac turpis. Nam aliquam sem et tortor.
+        <p class="paragraph">Massa tempor nec feugiat nisl pretium fusce id.
+            <span class="first">Nibh sit amet commodo nulla facilisi nullam vehicula ipsum.</span>
+            <span class="second">Sit amet volutpat consequat mauris nunc.</span>
+            <span class="third">Morbi quis commodo odio aenean sed adipiscing diam.</span>
+            <span class="fourth">Nulla facilisi morbi tempus iaculis urna id volutpat lacus.</span>
+            <span class="fifth">Consectetur purus ut faucibus pulvinar elementum integer.</span>
         </p>
 
 
