--- a/KlassWork/Practica3.html
+++ b/KlassWork/Practica3.html
@@ -12,7 +12,7 @@
 
 A linear equation is any equation that can be written in the form
 
-  <p class="pFormula"><span   class="sFormula">ax + b = 0</span></p>  
+  <p class="pFormula"><span   class="sFormula">&ensp; ax + b = 0 &ensp;</span></p>  
 
 where <span class="letters">a</span> and <span class="letters">b</span> are real numbers and <span class="letters">x</span> is a variable. This form is sometimes called the standard form of a linear equation. Note that most linear equations will not start off in this form. Also, the variable may or may not be an x so don’t get too locked into always seeing an <span class="letters">x</span> there.
 
@@ -20,7 +20,7 @@ where <span class="letters">a</span> and <span class="letters">b</span> are real
 
 The standard form of a quadratic equation looks like this:
 
-<p class="pFormula"><span   class="sFormula">ax<sup>2</sup> + bx + c = 0</span></p>  
+<p class="pFormula"><span   class="sFormula">&ensp;ax<sup>2</sup> + bx + c = 0&ensp;</span></p>  
 
 where <span class="letters">a</span>, <span class="letters">b</span>, <span class="letters">c</span> are known values and <span class="letters">x</span> is the variable or unknown (we don't know it yet). Also, <span class="letters">a</span> can't be 0.
 
@@ -28,19 +28,19 @@ where <span class="letters">a</span>, <span class="letters">b</span>, <span clas
 
 <span class="letters">&pi;</span> (Pi) times the radius (<span class="letters">r</span>) squared:
 
-<p class="pFormula"><span   class="sFormula">A = &pi; 	&#9747; r<sup>2</sup> </span></p> 
+<p class="pFormula"><span   class="sFormula">&ensp;A = &pi; 	&#215; r<sup>2</sup> &ensp;</span></p> 
 
 or, when you know the diameter (<span class="letters">D</span>):
-<p class="pFormula"><span   class="sFormula">A = (&pi; / 4) &#9747; D<sup>2</sup> </span></p>  
+<p class="pFormula"><span   class="sFormula">&ensp;A = (&pi; / 4) &#215; D<sup>2</sup> &ensp;</span></p>  
 
 or, when you know the circumference (<span class="letters">C</span>):
-<p class="pFormula"><span   class="sFormula">A = C<sup>2</sup> / 4 &#9747; &pi; </span></p>
+<p class="pFormula"><span   class="sFormula">&ensp;A = C<sup>2</sup> / 4 &#215; &pi; &ensp;</span></p>
 
 <h2 class="titles">Intersection</h2>
 
 The intersection of two sets <span class="letters">A</span> and <span class="letters">B</span>, denoted by A &cap; B, is the set of all objects that are members of both the sets A and B. In symbols,
 
-<p class="pFormula"><span   class="sFormula">A &cap; B = { x : x &isin; A and x &isin; B }</span></p>   
+<p class="pFormula"><span   class="sFormula">&ensp;A &cap; B = { x : x &isin; A and x &isin; B }&ensp;</span></p>   
 
 That is, <span class="letters">x</span> is an element of the intersection A &cap; B if and only if <span class="letters">x</span> is both an element of <span class="letters">A</span> and an element of <span class="letters">B</span>.
     </body>
